<resources>
    <string name="app_name">Safety</string>
    <string name="Register">Registration</string>
    <string name="Name">Enter Name</string>
    <string name="Email">Enter Email Address</string>
    <string name="Pass">Enter Password</string>
    <string name="Con_pass">Confirm Password</string>
    <string name="Reg">Register</string>
    <string name="sign_in">Already have an account? Sign In</string>
    <string name="LogIn">Login</string>
    <string name="new_account">Not registered? Create new Account</string>
    <string name="Log">LOGIN</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="Phone">Enter Phone Number</string>
    <string name="face">Facebook icon as an alternative means of logging in</string>
    <string name="google">Google icon as an alternative means for logging in</string>
    <string name="registered_successfully">Registered Successfully</string>
    <string name="dashboard">Dashboard</string>
    <string name="heading">About</string>
    <string name="action_settings">Settings</string>
    <string name="txt_done">Done</string>
    <string name="txt_search">Search</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="subheading">SafeScape</string>
    <string name="text">This application is created to help reduce the gender based violence cases in Kenya against Women.
    \nThis is an important step towards achieving the <b>5 th</b> Sustainable Development Goal set by the United Nations on Gender Equality.
        \nGender Equality is all about equal rights and fair treatment.
        \nThis page basically explains how this app tries to solve that
        \n<b>Emergency contact section:</b> it enables you to access your phone contacts and select contacts a maximum of 5 contacts
        \n who will be notified in case of an emergency.You can change the contacts at any time.
        \n<b>Location section:</b> it enables you to access locations of the nearest hospital and police station for help.
        \n I hope you will not be in a position to use them but this is for use when the situation gets out of hand.
        \n<b>Tips contact section:</b> it enables you to access important resources such as articles on what to do and how to respond when such a situation occurs.
        \nAbout contact section: it explains more about the application including the features it contains
        \n<b>Emergency button section:</b> These are the 2 buttons <b>"Start" and "Stop"</b> at the bottom of the dashboard.
        \n Upon pressing the start button you should see a pop-up where you select if you want to send an emergency message with your location.
        \n on the other hand,the stop button sends a message to your emergency contacts that you are safe.
    </string>
    <string name="find">Find</string>
    <string name="search">Search</string>
    <string name="done">DONE</string>
    <string name="Tips">Resources</string>
    <string name="add_emergency_contact">Add Emergency Contact</string>
    <string name="send">Send</string>
    <string name="search_here">Search here</string>
    <string name="bar_graph">Bar Graph</string>
    <string name="reports">REPORTS</string>
    <string name="graphs">Charts and Graph</string>
    <string name="line">Line Graph</string>
    <string name="chart">Pie Chart</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="line_graph">Line Graph</string>
    <string name="police_station">Police Station</string>
    <string name="h_pital">Hospital</string>
    <string name="nearest_location">Nearest location</string>
    <string name="maps">Maps</string>

</resources>


    <!--<string name="multiple_line">This is line one "\n" This is line two "\n"This is line three "\n" This is line four </string>-->
    <!--<string name="article_text"> The father tells the older son:-->
    <!--    \nThe story of the prodigal son is one of the most insightful, memorable stories that Jesus told while He was on Earth.-->
    <!--    \n-->
    <!--    <b>1</b>-->
    <!--    \nThrough it, Christ brought to light the ravages of sin, the value of true repentance, and the love of the heavenly Father.-->
    <!--    \n-->
    <!--    \nBy putting that story into rhyming verse on a child’s level, A Son Who Ran Away offers an easy-to-understand resource for teaching children the meaning and importance of the prodigal son.-->
    <!--    \n-->
    <!--    <b>2</b>-->
    <!--    \nIn the story, a father has two sons. The younger son asks for his portion of inheritance from his father, who grants his son\'s request.-->
    <!--    \n-->
    <!--    \nThis son however is prodigal that is wasteful and extravagant thus squandering his fortune and eventually becoming destitute.-->
    <!--    \nAs consequence, he now must return home empty-handed and intend to beg his father to accept him back as a servant. To the son's surprise, he is not scorned by his father but is welcomed back with celebration and a welcoming party.-->
    <!--    \nEnvious, the older son refuses to participate in the festivities.\n-->