<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/light_blue"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="0dp"
    android:layout_marginTop="0dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="9dp"
        android:id="@+id/abouttext">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/title_about" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subheading"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:id="@+id/title_info" />

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"

            android:fontFamily="@font/abhaya_libr"
            android:text="@string/text"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="normal" />

    </LinearLayout>

</ScrollView>

</RelativeLayout>


