<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/deep_pink"
    tools:context=".RegistrationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:id="@+id/user_reg" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_reg"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="10dp"
            android:layout_below="@id/user_reg">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_name"
                android:hint="@string/Name"
                android:layout_margin="10dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:background="@drawable/border"
                android:textSize="22sp"
                android:textColorHint="@color/white"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_email"
                android:hint="@string/Email"
                android:layout_margin="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:background="@drawable/border"
                android:textSize="22sp"
                android:textColorHint="@color/white"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_pass"
                android:hint="@string/Pass"
                android:maxLength="12"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@drawable/border"
                android:textSize="22sp"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="true"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_con_pass"
                android:hint="@string/Con_pass"
                android:maxLength="12"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@drawable/border"
                android:textSize="22sp"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="true"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:hint="@string/Phone"
                android:maxLength="10"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="22sp"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            >
            <Button
                android:layout_width="250dp"
                android:layout_height="49dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:id="@+id/reg_btn"
                android:onClick="Register"
                android:backgroundTint="@color/black"
                android:text="Register"
                tools:ignore="UsingOnClickInXml"/>






            <!--<View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@color/purple_200"
                /> -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Sign"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:id="@+id/sign_in"
                android:textSize="19sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="20dp"
                tools:ignore="OnClick" />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>