<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnalysisActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:background="@drawable/rect"
        android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reports"
        android:id="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="26dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_below="@id/welcome"
        android:text="@string/graphs"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        android:id="@+id/report">


        <Button
            android:id="@+id/btnBar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="250dp"
            android:backgroundTint="@color/light_blue"
            android:gravity="center"
            android:text="@string/bar_graph"
            android:textSize="20sp"
            android:textColor="@color/black"/>


        <Button
            android:id="@+id/btnPie"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/light_blue"
            android:gravity="center"
            android:text="@string/chart"
            android:textSize="20sp"
            android:textColor="@color/black"/>

    </LinearLayout>


<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="12dp"-->
<!--        android:id="@+id/report">-->

<!--    <Button-->
<!--        android:id="@+id/btnBar"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="100dp"-->
<!--        android:backgroundTint="@color/white"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/bar_graph"-->
<!--        android:textSize="20sp"-->
<!--        />-->

<!--    <Button-->
<!--        android:id="@+id/btnPie"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="100dp"-->
<!--        android:backgroundTint="@color/white"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/chart"-->
<!--        android:textSize="20sp" />-->


<!--    <Button-->
<!--        android:id="@+id/btnLine"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="100dp"-->
<!--        android:backgroundTint="@color/white"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/line"-->
<!--        android:textSize="20sp" />-->

<!--    </LinearLayout>-->

</RelativeLayout>
